adding a pitch to the presentation

--- a/slidify/presentation.html
+++ b/slidify/presentation.html
@@ -46,7 +46,9 @@
     <h2>About stockVis</h2>
   </hgroup>
   <article data-timings="">
-    <p>The stockVis application allows the user to look up stock prices pulled from Yahoo! Finance, and stock prices adjusted for inflation from the Federal Reserve Bank of St. Louis. The original application can be found in the Shiny tutorial at: <a href="http://shiny.rstudio.com/tutorial/lesson6/">http://shiny.rstudio.com/tutorial/lesson6/</a>.</p>
+    <p>Wouldn&#39;t it be cool to have a financial app to monitor the performance of a stock in your portfolio? Well, now you can! We introduce the one-of-a-kind stockVis!</p>
+
+<p>The stockVis application allows the user to look up stock prices pulled from Yahoo! Finance, and stock prices adjusted for inflation from the Federal Reserve Bank of St. Louis. The original application can be found in the Shiny tutorial at: <a href="http://shiny.rstudio.com/tutorial/lesson6/">http://shiny.rstudio.com/tutorial/lesson6/</a>.</p>
 
 <p>We have made some modifications to include a dotplot comparison of an equity to a widely known stock market index: SPY, as well as a plot to determine the autocorrelation for a given stock. This modification is under <code>Extra Information</code>.</p>
 
