--- a/slidify/presentation.html
+++ b/slidify/presentation.html
@@ -103,15 +103,15 @@
   <article data-timings="">
     <h3>Autocorrelation Function</h3>
 
-<p>The autocorrelation function is a mathematical tool for finding repeating patterns in time series data. The dotted blue lines generated in the stockVis plot after checking <code>Autocorrelation Function</code> represent the confidence interval. Anything above or below the confidence interval would indicate a significant cross-correlation in the data. The definition of the autocorrelation between times <em>s</em> and <em>t</em> is given below:</p>
+<p>The autocorrelation function is a mathematical tool for finding repeating patterns in time series data. The dotted blue lines generated in the stockVis plot after checking <code>Autocorrelation Function</code> represent the confidence interval. Anything above or below the confidence interval would indicate a significant cross-correlation in the data. The definition of the autocorrelation between time periods <em>s</em> and <em>t</em> is given below:</p>
 
 <p>\[
   R(s, t) = \frac{E[(X_t-\mu_t)(X_s-\mu_s)]}{\sigma_t\sigma_s}
 \]</p>
 
-<p>Here, \(\sigma_t\) is the standard deviation of the closing prices between time \(t\) and time \(s\), and \(\sigma_s\) is the standard deviation of the closing prices at an earlier time frame, ending at time \(s\). \(\mu_s\) and \(\mu_t\) are the average prices.</p>
+<p>Here, \(\sigma_t\) is the standard deviation of the closing prices at time period \(t\), and \(\sigma_s\) is the standard deviation of the closing prices at time period \(s\). \(\mu_s\) and \(\mu_t\) are the average prices.</p>
 
-<p>\(E[(X_t-\mu_t){X_s-\mu_s)}]\) is the covariance between spot price \(X_s\) at time \(s\) and spot price \(X_t\) at time \(t\).</p>
+<p>\(E[(X_t-\mu_t){X_s-\mu_s)}]\) is the covariance between random variable \(X_s\) at time \(s\) and random variable \(X_t\) at time \(t\).</p>
 
   </article>
   <!-- Presenter Notes -->
