--- a/slidify/presentation.html
+++ b/slidify/presentation.html
@@ -111,7 +111,7 @@
 
 <p>Here, \(\sigma_t\) is the standard deviation of the closing prices at time period \(t\), and \(\sigma_s\) is the standard deviation of the closing prices at time period \(s\). \(\mu_s\) and \(\mu_t\) are the average prices.</p>
 
-<p>\(E[(X_t-\mu_t){X_s-\mu_s)}]\) is the covariance between random variable \(X_s\) at time \(s\) and random variable \(X_t\) at time \(t\).</p>
+<p>\(E[(X_t-\mu_t)(X_s-\mu_s)]\) is the covariance between random variable \(X_s\) at time \(s\) and random variable \(X_t\) at time \(t\).</p>
 
   </article>
   <!-- Presenter Notes -->
